# antiplagiat-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  server.py
deploy/: Caddyfile  antiplagiat-mcp.service  tailscale-serve.md
scripts/: calibrate.py  download_models.py
src/: __init__.py  cache.py  config.py  embeddings.py  language.py  mcp_app.py  pipeline.py
src/detectors/: __init__.py  ai_local.py  external.py  plagiarism.py
tests/: test_ai_local.py  test_external.py  test_language.py  test_plagiarism.py
