[project]
name = "antiplagiat-mcp"
version = "0.1.0"
description = "MCP server for plagiarism and AI-generation detection (RU/EN)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "transformers>=4.46.0",
    "sentencepiece>=0.2.0",
    "torch>=2.5.0",
    "optimum[onnxruntime]>=1.23.0",
    "sentence-transformers>=3.3.0",
    "razdel>=0.5.0",
    "langdetect>=1.0.9",
    "trafilatura>=1.12.0",
    "numpy>=2.0.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
